codegen/ui_tests/export_mod_cfg.stderr
error: expected attribute arguments in parentheses: #[rhai_fn(...)]
  --> ui_tests/export_mod_cfg.rs:12:3
   |
12 | #[rhai_fn]
   |   ^^^^^^^
